# packages/api/src/routers/api/alerts.ts
@@ -87,6 +87,7 @@ const formatAlertResponse = (
       'updatedAt',
       'executionErrors',
       'numConsecutiveWindows',
+      'notifyOnStateChangeOnly',
     ]),
   };
 };
